[gd_scene load_steps=20 format=3 uid="uid://b5b8oe8ub6qte"]

[ext_resource type="Texture2D" uid="uid://bycp4u3n56d3x" path="res://assets/bg/bg1.png" id="1_7xnws"]
[ext_resource type="Script" path="res://game.gd" id="1_td33d"]
[ext_resource type="PackedScene" uid="uid://bjb3gyhpj1yny" path="res://bird.tscn" id="2_ojgey"]
[ext_resource type="Texture2D" uid="uid://c35t2albbv5cn" path="res://assets/bg/bg3.png" id="3_51usj"]
[ext_resource type="Script" path="res://feedback.gd" id="4_bovo5"]
[ext_resource type="AudioStream" uid="uid://cf2njwmf5u0t2" path="res://assets/audio/error.wav" id="5_a4tnp"]
[ext_resource type="AudioStream" uid="uid://c1fsjj8cv0pxv" path="res://assets/audio/correct.wav" id="6_n3ab3"]
[ext_resource type="Theme" uid="uid://cxh17iwcfbeu0" path="res://game_theme.tres" id="7_wha37"]
[ext_resource type="AudioStream" uid="uid://328awdwpmdus" path="res://assets/audio/music.wav" id="8_sig2p"]
[ext_resource type="Texture2D" uid="uid://jlp6omt40nw5" path="res://assets/medal.webp" id="9_2qgwi"]
[ext_resource type="Script" path="res://PanelPlacar2.gd" id="9_c8yfr"]
[ext_resource type="AudioStream" uid="uid://opcdl50nj0is" path="res://assets/audio/level.wav" id="9_hcgip"]
[ext_resource type="Script" path="res://TelaColetaDados.gd" id="10_80rlu"]
[ext_resource type="PackedScene" uid="uid://bqc6tkqb0yqiq" path="res://narrador.tscn" id="10_jnnov"]
[ext_resource type="Texture2D" uid="uid://dg7r61h75ab8e" path="res://assets/diamond.webp" id="14_knlpr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cimmk"]
size = Vector2(450, 450)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q1t22"]
bg_color = Color(0.6, 0.6, 0.6, 0.596078)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.768627)
shadow_size = 8
shadow_offset = Vector2(2, 2)

[sub_resource type="Theme" id="Theme_c3fh4"]
Panel/colors/correct = Color(0, 0.694118, 0, 0.894118)
Panel/colors/error = Color(0.839216, 0, 0, 0.894118)
Panel/styles/panel = SubResource("StyleBoxFlat_q1t22")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f5vwg"]
bg_color = Color(0.31802, 0.31802, 0.31802, 1)

[node name="Game" type="Node2D"]
script = ExtResource("1_td33d")

[node name="playArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="playArea"]
visible = false
position = Vector2(225, 225)
shape = SubResource("RectangleShape2D_cimmk")

[node name="Bg1" type="Sprite2D" parent="playArea"]
visible = false
position = Vector2(225.1, 225.1)
scale = Vector2(0.56, 0.56)
texture = ExtResource("1_7xnws")

[node name="Bg2" type="Sprite2D" parent="playArea"]
visible = false
position = Vector2(225.1, 225.1)
scale = Vector2(0.56, 0.56)
texture = ExtResource("3_51usj")

[node name="Bg3" type="Sprite2D" parent="playArea"]
visible = false
position = Vector2(225.1, 225.1)
scale = Vector2(0.56, 0.56)
texture = ExtResource("1_7xnws")

[node name="bird" parent="playArea" instance=ExtResource("2_ojgey")]
position = Vector2(-90, 51)

[node name="spawnTimer" type="Timer" parent="playArea/bird"]

[node name="feedback" type="Panel" parent="playArea"]
visible = false
offset_left = 99.0
offset_top = 51.0
offset_right = 369.0
offset_bottom = 121.0
theme = SubResource("Theme_c3fh4")
script = ExtResource("4_bovo5")

[node name="feedbackTimer" type="Timer" parent="playArea/feedback"]

[node name="msg" type="Label" parent="playArea/feedback"]
layout_mode = 0
offset_left = -1.0
offset_top = 3.0
offset_right = 269.0
offset_bottom = 68.0
theme_override_font_sizes/font_size = 12
text = "Que pena, você errou a direção do pássaro! Continue tentando!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="error_sound" type="AudioStreamPlayer2D" parent="playArea/feedback"]
stream = ExtResource("5_a4tnp")

[node name="correct_sound" type="AudioStreamPlayer2D" parent="playArea/feedback"]
stream = ExtResource("6_n3ab3")

[node name="score" type="Area2D" parent="playArea"]

[node name="PanelPlacar" type="Panel" parent="playArea/score"]
visible = false
offset_left = 10.0
offset_top = 379.0
offset_right = 116.0
offset_bottom = 439.0
theme = ExtResource("7_wha37")

[node name="lost_value" type="Label" parent="playArea/score/PanelPlacar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.428
anchor_bottom = 0.256
offset_left = 56.0
offset_top = 45.0
offset_right = 21.632
offset_bottom = 52.64
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 9
text = "0"
horizontal_alignment = 2

[node name="lost_label" type="Label" parent="playArea/score/PanelPlacar"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.428
anchor_bottom = 0.256
offset_left = 14.0
offset_top = 45.0
offset_right = 10.632
offset_bottom = 52.64
theme_type_variation = &"HeaderSmall"
theme_override_font_sizes/font_size = 9
text = "perdidos:"

[node name="correct_value" type="Label" parent="playArea/score/PanelPlacar"]
layout_mode = 0
offset_left = 56.0
offset_top = 33.0
offset_right = 67.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 9
text = "0"
horizontal_alignment = 2

[node name="correct_label" type="Label" parent="playArea/score/PanelPlacar"]
layout_mode = 0
offset_left = 14.0
offset_top = 33.0
offset_right = 56.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 9
text = "Corretos:"

[node name="error_value" type="Label" parent="playArea/score/PanelPlacar"]
layout_mode = 0
offset_left = 58.0
offset_top = 21.0
offset_right = 67.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 9
text = "0"
horizontal_alignment = 2

[node name="error_label" type="Label" parent="playArea/score/PanelPlacar"]
layout_mode = 0
offset_left = 14.0
offset_top = 21.0
offset_right = 46.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 9
text = "Erros:"

[node name="LabelPlacar" type="Label" parent="playArea/score/PanelPlacar"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 67.0
offset_bottom = 20.0
text = "Placar:"

[node name="LabelNível" type="Label" parent="playArea/score/PanelPlacar"]
layout_mode = 0
offset_left = 84.0
offset_top = 17.0
offset_right = 101.0
offset_bottom = 29.0
theme_override_font_sizes/font_size = 7
text = "nível"
horizontal_alignment = 2

[node name="level" type="Label" parent="playArea/score/PanelPlacar"]
layout_mode = 0
offset_left = 84.0
offset_top = 3.0
offset_right = 101.0
offset_bottom = 15.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelTempoReação" type="Panel" parent="playArea/score"]
visible = false
offset_left = 336.0
offset_top = 379.0
offset_right = 442.0
offset_bottom = 439.0
theme = ExtResource("7_wha37")

[node name="Label" type="Label" parent="playArea/score/PanelTempoReação"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 67.0
offset_bottom = 20.0
text = "Tempo de Reação:"

[node name="Label2" type="Label" parent="playArea/score/PanelTempoReação"]
layout_mode = 0
offset_left = 8.0
offset_top = 21.0
offset_right = 64.0
offset_bottom = 37.0
text = "Último:"
vertical_alignment = 1
autowrap_mode = 2

[node name="Label3" type="Label" parent="playArea/score/PanelTempoReação"]
layout_mode = 0
offset_left = 8.0
offset_top = 37.0
offset_right = 64.0
offset_bottom = 53.0
text = "Média:"
vertical_alignment = 1
autowrap_mode = 2

[node name="label_ultimo" type="Label" parent="playArea/score/PanelTempoReação"]
layout_mode = 0
offset_left = 56.0
offset_top = 21.0
offset_right = 96.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 9
text = "0 ms"
vertical_alignment = 1
autowrap_mode = 2

[node name="label_media" type="Label" parent="playArea/score/PanelTempoReação"]
layout_mode = 0
offset_left = 56.0
offset_top = 37.0
offset_right = 96.0
offset_bottom = 53.0
theme_override_font_sizes/font_size = 9
text = "0 ms"
vertical_alignment = 1
autowrap_mode = 2

[node name="PanelPlacar2" type="Panel" parent="playArea/score"]
visible = false
offset_left = 10.0
offset_top = 379.0
offset_right = 116.0
offset_bottom = 439.0
theme = ExtResource("7_wha37")
script = ExtResource("9_c8yfr")

[node name="Medal" type="Sprite2D" parent="playArea/score/PanelPlacar2"]
position = Vector2(80, 31)
scale = Vector2(0.0785156, 0.0785156)
texture = ExtResource("9_2qgwi")

[node name="level" type="Label" parent="playArea/score/PanelPlacar2"]
layout_mode = 0
offset_left = 73.0
offset_top = 46.0
offset_right = 90.0
offset_bottom = 60.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelLevel" type="Label" parent="playArea/score/PanelPlacar2"]
layout_mode = 0
offset_left = 67.0
offset_right = 94.0
offset_bottom = 14.0
text = "Nível"

[node name="coins_label" type="Label" parent="playArea/score/PanelPlacar2"]
layout_mode = 0
offset_left = 17.0
offset_top = 11.0
offset_right = 29.0
offset_bottom = 25.0
text = "00"

[node name="Diamond" type="Sprite2D" parent="playArea/score/PanelPlacar2"]
position = Vector2(22, 43)
scale = Vector2(0.0976562, 0.0976562)
texture = ExtResource("14_knlpr")

[node name="Narrador" parent="playArea" instance=ExtResource("10_jnnov")]
visible = false
position = Vector2(-45, 152)
scale = Vector2(1.1, 1.1)

[node name="reactionTimer" type="Timer" parent="."]

[node name="background_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_sig2p")
volume_db = -15.923

[node name="level_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_hcgip")
volume_db = 4.952

[node name="continue_game" type="Button" parent="."]
process_mode = 2
visible = false
offset_left = 99.0
offset_top = 8.0
offset_right = 307.0
offset_bottom = 80.0
theme = ExtResource("7_wha37")
text = "CONTINUAR"

[node name="TelaColetaDados" type="PanelContainer" parent="."]
offset_left = 78.0
offset_top = 102.0
offset_right = 387.0
offset_bottom = 383.0
theme_override_styles/panel = SubResource("StyleBoxFlat_f5vwg")
script = ExtResource("10_80rlu")

[node name="MarginContainer" type="MarginContainer" parent="TelaColetaDados"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Rows" type="VBoxContainer" parent="TelaColetaDados/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Cols1" type="HBoxContainer" parent="TelaColetaDados/MarginContainer/Rows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LabelNome" type="Label" parent="TelaColetaDados/MarginContainer/Rows/Cols1"]
layout_mode = 2
text = "Nome: "

[node name="InputNome" type="LineEdit" parent="TelaColetaDados/MarginContainer/Rows/Cols1"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Seu nome"
caret_blink = true

[node name="Cols2" type="HBoxContainer" parent="TelaColetaDados/MarginContainer/Rows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LabelEmail" type="Label" parent="TelaColetaDados/MarginContainer/Rows/Cols2"]
layout_mode = 2
text = "Email:  "

[node name="InputEmail" type="LineEdit" parent="TelaColetaDados/MarginContainer/Rows/Cols2"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Seu email para contato"

[node name="Cols3" type="HBoxContainer" parent="TelaColetaDados/MarginContainer/Rows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LabelNascimento" type="Label" parent="TelaColetaDados/MarginContainer/Rows/Cols3"]
layout_mode = 2
text = "Nascimento: "

[node name="InputNascimento" type="LineEdit" parent="TelaColetaDados/MarginContainer/Rows/Cols3"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "dd/mm/aaaa"
max_length = 10

[node name="Button" type="Button" parent="TelaColetaDados/MarginContainer/Rows"]
layout_mode = 2
text = "Enviar"

[connection signal="correct_selection" from="." to="playArea/score/PanelPlacar2" method="_on_game_correct_selection"]
[connection signal="level_change" from="." to="." method="_on_level_change"]
[connection signal="level_change" from="." to="playArea/feedback" method="_on_game_level_change"]
[connection signal="level_change" from="." to="playArea/score/PanelPlacar2" method="_on_game_level_change"]
[connection signal="area_entered" from="playArea" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="playArea" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="playArea/bird/spawnTimer" to="." method="spawn_bird"]
[connection signal="timeout" from="playArea/feedback/feedbackTimer" to="playArea/feedback" method="hide_msg"]
[connection signal="finished" from="playArea/Narrador" to="." method="_on_narrador_finished"]
[connection signal="pressed" from="continue_game" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="TelaColetaDados/MarginContainer/Rows/Button" to="TelaColetaDados" method="_on_button_enviar_pressed"]
